5 August 2009: Wouter
	- trunk moved to 1.3.4.

4 August 2009: Wouter
	- Added test that the examples from draft rsasha256-14 verify.
	- iana portlist updated.
	- tagged 1.3.3

3 August 2009: Wouter
	- nicer warning when algorithm not supported, tells you to upgrade.
	- iana portlist updated.

27 July 2009: Wouter
	- Updated unbound-cacti contribution from Dmitriy Demidov, with
	  the queue statistics displayed in its own graph.
	- iana portlist updated.

22 July 2009: Wouter
	- Fix bug found by Michael Tokarev where unbound would try to
	  prime the root servers even though forwarders are configured for
	  the root.
	- tagged 1.3.3rc1

21 July 2009: Wouter
	- Fix server selection, so that it waits for open target queries when
	  faced with lameness.

20 July 2009: Wouter
	- Ignore transient sendto errors, no route to host, and host, net down.
	- contrib/update-anchor.sh has -r option for root-hints.
	- feature val-log-level: 1 prints validation failures so you can
	  keep track of them during dnssec deployment.

16 July 2009: Wouter
	- fix replacement malloc code.  Used in crosscompile.
	- makedist -w creates crosscompiled setup.exe on fedora11.

15 July 2009: Wouter
	- dependencies for compat items, for crosscompile.
	- mingw32 crosscompile changes, dependencies and zipfile creation.
	  and with System.dll from the windows NSIS you can make setup.exe.
	- package libgcc_s_sjlj exception handler for NSISdl.dll.

14 July 2009: Wouter
	- updated ldns tarball for solaris x64 compile assistance.
	- no need to define RAND_MAX from config.h.
	- iana portlist updated.
	- configure changes and ldns update for mingw32 crosscompile.

13 July 2009: Wouter
	- Fix for crash at start on windows.
	- tag for release 1.3.2.
	- trunk has version 1.3.3.
	- Fix for ID bits on windows to use all 16. RAND_MAX was not
	  defined like you'd expect on mingw. Reported by Mees de Roo.

9 July 2009: Wouter
	- tag for release 1.3.1.
	- trunk has version 1.3.2.

7 July 2009: Wouter