@@ -66,6 +66,7 @@ testbound_usage()
 	printf("-h      this help\n");
 	printf("-p file	playback text file\n");
 	printf("-2 	detect SHA256 support (exit code 0 or 1)\n");
+	printf("-g 	detect GOST support (exit code 0 or 1)\n");
 	printf("-o str  unbound commandline options separated by spaces.\n");
 	printf("Version %s\n", PACKAGE_VERSION);
 	printf("BSD licensed, see LICENSE file in source package.\n");
@@ -224,7 +225,7 @@ main(int argc, char* argv[])
 	pass_argc = 1;
 	pass_argv[0] = "unbound";
 	add_opts("-d", &pass_argc, pass_argv);
-	while( (c=getopt(argc, argv, "2ho:p:")) != -1) {
+	while( (c=getopt(argc, argv, "2gho:p:")) != -1) {
 		switch(c) {
 		case '2':
 #if defined(HAVE_EVP_SHA256) && defined(USE_SHA2)
@@ -232,6 +233,15 @@ main(int argc, char* argv[])
 			exit(0);
 #else
 			printf("SHA256 not supported\n");
+			exit(1);
+#endif
+			break;
+		case 'g':
+#if defined(HAVE_ENGINE_LOAD_GOST) && defined(USE_GOST)
+			printf("GOST supported\n");
+			exit(0);
+#else
+			printf("GOST not supported\n");
 			exit(1);
 #endif
 			break;
