@@ -256,10 +256,26 @@ ds_digest_size_algo(struct ub_packed_rrset_key* k, size_t idx)
 		case LDNS_SHA256:
 			return SHA256_DIGEST_LENGTH;
 #endif
+#if defined(HAVE_ENGINE_LOAD_GOST) && defined(USE_GOST)
+		case LDNS_HASH_GOST94:
+			return 32;
+#endif
 		default: break;
 	}
 	return 0;
 }
+
+#if defined(HAVE_ENGINE_LOAD_GOST) && defined(USE_GOST)
+/** Perform GOST94 hash */
+static int
+do_gost94(unsigned char* data, size_t len, unsigned char* dest)
+{
+	const EVP_MD* md = EVP_get_digestbyname("md_gost94");
+	if(!md) 
+		return 0;
+	return ldns_digest_evp(data, len, dest, md);
+}
+#endif
 
 /**
  * Create a DS digest for a DNSKEY entry.
@@ -305,6 +321,12 @@ ds_create_dnskey_digest(struct module_env* env,
 			(void)SHA256((unsigned char*)ldns_buffer_begin(b),
 				ldns_buffer_limit(b), (unsigned char*)digest);
 			return 1;
+#endif
+#if defined(HAVE_ENGINE_LOAD_GOST) && defined(USE_GOST)
+		case LDNS_HASH_GOST94:
+			if(do_gost94((unsigned char*)ldns_buffer_begin(b), 
+				ldns_buffer_limit(b), (unsigned char*)digest))
+				return 1;
 #endif
 		default: 
 			verbose(VERB_QUERY, "unknown DS digest algorithm %d", 
@@ -375,6 +397,9 @@ dnskey_algo_id_is_supported(int id)
 #endif
 #if defined(HAVE_EVP_SHA512) && defined(USE_SHA2)
 	case LDNS_RSASHA512:
+#endif
+#if defined(HAVE_ENGINE_LOAD_GOST) && defined(USE_GOST)
+	case LDNS_GOST:
 #endif
 		return 1;
 	default:
@@ -1202,14 +1227,14 @@ setup_dsa_sig(unsigned char** sig, unsigned int* len)
  * Setup key and digest for verification. Adjust sig if necessary.
  *
  * @param algo: key algorithm
- * @param evp_key: EVP PKEY public key to update.
+ * @param evp_key: EVP PKEY public key to create.
  * @param digest_type: digest type to use
  * @param key: key to setup for.
  * @param keylen: length of key.
  * @return false on failure.
  */
 static int
-setup_key_digest(int algo, EVP_PKEY* evp_key, const EVP_MD** digest_type, 
+setup_key_digest(int algo, EVP_PKEY** evp_key, const EVP_MD** digest_type, 
 	unsigned char* key, size_t keylen)
 {
 	DSA* dsa;
@@ -1218,13 +1243,18 @@ setup_key_digest(int algo, EVP_PKEY* evp_key, const EVP_MD** digest_type,
 	switch(algo) {
 		case LDNS_DSA:
 		case LDNS_DSA_NSEC3:
+			*evp_key = EVP_PKEY_new();
+			if(!*evp_key) {
+				log_err("verify: malloc failure in crypto");
+				return sec_status_unchecked;
+			}
 			dsa = ldns_key_buf2dsa_raw(key, keylen);
 			if(!dsa) {
 				verbose(VERB_QUERY, "verify: "
 					"ldns_key_buf2dsa_raw failed");
 				return 0;
 			}
-			if(EVP_PKEY_assign_DSA(evp_key, dsa) == 0) {
+			if(EVP_PKEY_assign_DSA(*evp_key, dsa) == 0) {
 				verbose(VERB_QUERY, "verify: "
 					"EVP_PKEY_assign_DSA failed");
 				return 0;
@@ -1240,13 +1270,18 @@ setup_key_digest(int algo, EVP_PKEY* evp_key, const EVP_MD** digest_type,
 #if defined(HAVE_EVP_SHA512) && defined(USE_SHA2)
 		case LDNS_RSASHA512:
 #endif
+			*evp_key = EVP_PKEY_new();
+			if(!*evp_key) {
+				log_err("verify: malloc failure in crypto");
+				return sec_status_unchecked;
+			}
 			rsa = ldns_key_buf2rsa_raw(key, keylen);
 			if(!rsa) {
 				verbose(VERB_QUERY, "verify: "
 					"ldns_key_buf2rsa_raw SHA failed");
 				return 0;
 			}
-			if(EVP_PKEY_assign_RSA(evp_key, rsa) == 0) {
+			if(EVP_PKEY_assign_RSA(*evp_key, rsa) == 0) {
 				verbose(VERB_QUERY, "verify: "
 					"EVP_PKEY_assign_RSA SHA failed");
 				return 0;
@@ -1267,13 +1302,18 @@ setup_key_digest(int algo, EVP_PKEY* evp_key, const EVP_MD** digest_type,
 
 			break;
 		case LDNS_RSAMD5:
+			*evp_key = EVP_PKEY_new();
+			if(!*evp_key) {
+				log_err("verify: malloc failure in crypto");
+				return sec_status_unchecked;
+			}
 			rsa = ldns_key_buf2rsa_raw(key, keylen);
 			if(!rsa) {
 				verbose(VERB_QUERY, "verify: "
 					"ldns_key_buf2rsa_raw MD5 failed");
 				return 0;
 			}
-			if(EVP_PKEY_assign_RSA(evp_key, rsa) == 0) {
+			if(EVP_PKEY_assign_RSA(*evp_key, rsa) == 0) {
 				verbose(VERB_QUERY, "verify: "
 					"EVP_PKEY_assign_RSA MD5 failed");
 				return 0;
@@ -1281,6 +1321,22 @@ setup_key_digest(int algo, EVP_PKEY* evp_key, const EVP_MD** digest_type,
 			*digest_type = EVP_md5();
 
 			break;
+#if defined(HAVE_ENGINE_LOAD_GOST) && defined(USE_GOST)
+		case LDNS_GOST:
+			*evp_key = ldns_gost2pkey_raw(key, keylen);
+			if(!*evp_key) {
+				verbose(VERB_QUERY, "verify: "
+					"ldns_gost2pkey_raw failed");
+				return 0;
+			}
+			*digest_type = EVP_get_digestbyname("md_gost94");
+			if(!*digest_type) {
+				verbose(VERB_QUERY, "verify: "
+					"EVP_getdigest md_gost94 failed");
+				return 0;
+			}
+			break;
+#endif
 		default:
 			verbose(VERB_QUERY, "verify: unknown algorithm %d", 
 				algo);
@@ -1308,13 +1364,9 @@ verify_canonrrset(ldns_buffer* buf, int algo, unsigned char* sigblock,
 	const EVP_MD *digest_type;
 	EVP_MD_CTX ctx;
 	int res, dofree = 0;
-	EVP_PKEY *evp_key = EVP_PKEY_new();
-	if(!evp_key) {
-		log_err("verify: malloc failure in crypto");
-		return sec_status_unchecked;
-	}
-
-	if(!setup_key_digest(algo, evp_key, &digest_type, key, keylen)) {
+	EVP_PKEY *evp_key = NULL;
+	
+	if(!setup_key_digest(algo, &evp_key, &digest_type, key, keylen)) {
 		verbose(VERB_QUERY, "verify: failed to setup key");
 		EVP_PKEY_free(evp_key);
 		return sec_status_bogus;
