@@ -1,3 +1,7 @@
+6 August 2009: Wouter
+	- configure --enable-gost for GOST support, experimental
+	  implementation of draft-dolmatov-dnsext-dnssec-gost-01.
+
 5 August 2009: Wouter
 	- trunk moved to 1.3.4.
 
